# EmailProcessorCloud

./: .env.example  .gitignore  README.md  milestone1.md  milestone2.md  milestone3.md  milestone4.md  milestone5.md  milestone6.md  milestone7.md  milestone8-content-unit-routing.md  pyproject.toml
app/: __init__.py  config.py  main.py
daily_knowledge_digest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: README.md  architecture-diagram.md  content-unit-classifiers.md  content-unit-routing-design.md  deploy-vps.md  implementation-status.md  interrupt-grouping.md  map-reduce-radar-design.md  mixed-newsletter-shape-profile.md  phase7.1-backlog.md  pipeline-flowchart.md  section-extraction.md  sender-profiles.md
scripts/: register-daily-task.ps1  run-daily.ps1  run-daily.sh
tests/: agent_factory.py  conftest.py  test_ainews_boundaries.py  test_ainews_map_reduce_integration.py  test_ale_sp2.py  test_audit_profile_email.py  test_bytebytego_sp1.py  test_composer_hardening.py  test_composer_technology_fanout.py  test_content_unit_phase6.py  test_gmail_client.py  test_gmail_config.py  test_gmail_fetcher.py  test_gmail_labeler.py  test_gmail_sender.py  test_interrupt_detection.py  test_latent_space_sp3.py  test_llm_and_agents.py  test_map_reduce_chunks.py  test_milestone5_daily_digest.py  test_milestone6_cli.py  test_models.py  test_parser_sections.py  test_parsing_newsletter_html.py  test_phase7_boundary_classifier.py  test_profile_fast_path_contract.py  test_repository.py  test_repository_sections.py  test_run_lock.py  test_section_prompt_loading.py  (+5 more)
(+100 files in other folders)
