[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-knowledge-digest"
version = "0.2.0"
description = "Daily Knowledge Digest — Milestone 2 (Gmail integration)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "pydantic>=2.5",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
gmail = [
  "google-api-python-client>=2.120",
  "google-auth>=2.29",
  "google-auth-oauthlib>=1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
